<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Previous">Previous</string>
    <string name="Next">Next</string>
    <string name="Search">Search</string>
    <string name="save_image">Save Image</string>
    <string name="search_first">Please search for an image first.</string>
    <string name="view_stream">View Stream</string>
    <string name="to_search">To Search Screen</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="null_to_search">No images saved. \nPlease return to search.</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete?</string>
</resources>
