<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/searchView"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/search"
        android:layout_alignBottom="@+id/next"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_image"
        android:id="@+id/save"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/previous"
        android:layout_alignStart="@+id/previous" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_stream"
        android:id="@+id/viewStream"
        android:layout_alignTop="@+id/save"
        android:layout_alignRight="@+id/next"
        android:layout_alignEnd="@+id/next" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/next"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/search"
        android:layout_toEndOf="@+id/search" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Previous"
        android:id="@+id/previous"
        android:layout_below="@+id/editText"
        android:layout_toStartOf="@+id/search"
        android:layout_toLeftOf="@+id/search" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter" />
</RelativeLayout>
